# kist-drl-g1-onboard

./: .gitignore  LICENSE  README.md  env.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-meta.yml
config/: cyclonedds.xml
docker/: Dockerfile
docs/: CONVENTIONS.md  architecture.md
scripts/: build.sh  check_mic_outbound.py  exercise_speaker_live.py  peek_lowstate.py  replay_mic_multicast.py  run_onboard.sh
src/camera_relay/: CMakeLists.txt  package.xml
src/camera_relay/src/: camera_relay_node.cpp
src/comm_bridge/: package.xml  setup.cfg  setup.py
src/comm_bridge/comm_bridge/: camera_relay.py  inbound_relay.py  outbound_relay.py
src/comm_bridge/config/: comm_bridge_params.yaml
src/comm_bridge/launch/: comm_bridge.launch.py
src/g1_onboard_msgs/: CMakeLists.txt  package.xml
src/g1_onboard_msgs/msg/: AudioPCM.msg  BufState.msg  EstopFlag.msg  JointCmd.msg  JointCmdChunk.msg  LocoCommand.msg  NavState.msg  SpeakerState.msg
src/kist_drl_g1_msgs/: CMakeLists.txt  package.xml
src/kist_drl_g1_msgs/msg/: ActionChunk.msg  AudioPCM.msg  EstopFlag.msg  LocoCommand.msg  NavState.msg  SpeakerState.msg
src/motor_controller/: package.xml  setup.py
src/motor_controller/config/: motor_params.yaml
src/motor_controller/launch/: motor_controller.launch.py
src/motor_controller/motor_controller/: action_queue.py  motor_controller_node.py  queue_aggregate.py
src/motor_controller/systemd/: motor_controller.service
src/navigation/: package.xml  setup.py
src/navigation/config/: goto_params.yaml  named_goals.yaml
src/navigation/launch/: navigation.launch.py
src/navigation/navigation/: goto_node.py
src/safety_monitor/: package.xml  setup.py
src/safety_monitor/config/: safety_params.yaml
src/safety_monitor/launch/: safety_monitor.launch.py
src/safety_monitor/safety_monitor/: safety_monitor_node.py
src/safety_monitor/systemd/: safety_monitor.service
src/safety_monitor/test/: test_copyright.py  test_pep257.py  test_safety_integration.py  verify_safety_monitor.py
src/sensors/: package.xml  setup.py
src/sensors/config/: 99-uwb.rules  sensors_params.yaml
src/sensors/launch/: sensors.launch.py
src/sensors/sensors/: audio_node.py  camera_node.py  imu_ankle_node.py  imu_node.py  joint_state_node.py  lidar_node.py  location_node.py  mic_node.py  obstacle_map_node.py  odom_node.py  speaker_node.py  uwb_node.py
src/sensors/sensors/utils/: uwb_odom_aekf.py
src/sensors/test/: test_copyright.py  test_flake8.py  test_speaker_node.py  test_to_joint_state.py
