<?xml version="1.0"?>
<package format="3">
  <name>camera_relay</name>
  <version>0.0.1</version>
  <description>C++ relay for camera topics: domain 0 → domain 1.</description>
  <maintainer email="park50260@gmail.com">박성용</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
