<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.1</version>
  <description>
    20 Hz motor execution loop. Maintains a lock-free Ring Buffer plus a
    QueueAggregate (VLA action-chunk crossfade), routes commands across the G1 SDK
    control surfaces — LocoClient (walking + discrete FSM actions), rt/arm_sdk
    (upper-body joints with weight blending), and rt/lowcmd (29-motor debug, optional)
    — and reacts to the safety_monitor shared-memory E-STOP flag. Four execution
    modes: VELOCITY_CMD, JOINT_CMD, LOCO_CMD, ESTOP. Deployed as a systemd unit
    with CPUAffinity=1, Nice=-20.
  </description>
  <maintainer email="park50260@gmail.com">박성용</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kist_drl_g1_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
